--- a/html/home.html
+++ b/html/home.html
@@ -105,7 +105,7 @@
     <section id="ticketing">
       <form class="form-ticketing" action="" method="post">
         <div class="bloc-form-title">
-          <h2 class="form-title">BILLETERIE</h2>
+          <h2 class="form-title">BILLETTERIE</h2>
         </div>
         <div class="form-container">
           <div class="form-group-container">
