correction palmares folder title

--- a/html/history.html
+++ b/html/history.html
@@ -40,7 +40,7 @@
             >Accueil <span class="sr-only">(current)</span></a
           >
           <a class="nav-link text-right" href="history.html">Histoire</a>
-          <a class="nav-link text-right" href="../palmères/palm.html"
+          <a class="nav-link text-right" href="../palmares/palm.html"
             >Edition 2020</a
           >
           <a class="nav-link text-right" href="contact.html">Infos pratiques</a>
@@ -224,7 +224,7 @@
         <li><a class="footerItem" href="home.html">Accueil</a></li>
         <li><a class="footerItem" href="history.html"> Histoire</a></li>
         <li>
-          <a class="footerItem" href="../palmères/palm.html"> Edition 2020</a>
+          <a class="footerItem" href="../palmares/palm.html"> Edition 2020</a>
         </li>
         <li><a class="footerItem" href="contact.html"> Infos pratiques</a></li>
       </ul>
